[package]
name = "mandalas"
description = "A mandala generator using Tonči Juričev-Grgin's method"
documentation = "https://cdn.rawgit.com/nabijaczleweli/mandalas-rs/doc/mandalas/index.html"
repository = "https://github.com/nabijaczleweli/mandalas-rs"
readme = "README.md"
keywords = ["mandalas", "generate", "generator"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in mandalas.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
quickersort = "2.1"
lazy_static = "0.2"
arraydeque = "0.1"
num_cpus = "1.1"
image = "0.10"
regex = "0.1"
clap = "2.17"
rand = "0.3"
pbr = "0.3"


[[bin]]
name = "mandalas"
test = false
doc = false
