[package]
name = "mandalas"
description = "A mandala generator using Tonči Juričev-Grgin's method"
documentation = "https://rawcdn.githack.com/nabijaczleweli/mandalas-rs/doc/mandalas/index.html"
repository = "https://github.com/nabijaczleweli/mandalas-rs"
readme = "README.md"
keywords = ["mandalas", "generate", "generator"]
categories = ["multimedia", "science", "visualisation"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in mandalas.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
quickersort = "3.0"
lazy_static = "0.2"
arraydeque = "0.2"
itertools = "0.6"
num_cpus = "1.5"
image = "0.13"
regex = "0.2"
clap = "2.24"
rand = "0.3"
pbr = "1.0"


[[bin]]
name = "mandalas"
test = false
doc = false
