[package]
name = "mandalas"
description = "A mandala generator using Tonči Juričev-Grgin's method with a scalable driver"
documentation = "https://rawcdn.githack.com/nabijaczleweli/mandalas-rs/doc/mandalas/index.html"
repository = "https://github.com/nabijaczleweli/mandalas-rs"
readme = "README.md"
keywords = ["mandalas", "generate", "generator"]
categories = ["multimedia", "science", "visualisation"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in mandalas.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1

[dependencies]
fixed-vec-deque = "0.1"
quickersort = "3.0"
lazy_static = "1.4"
itertools = "0.8"
num_cpus = "1.11"
image = "0.22"
regex = "1.3"
clap = "2.33"
rand = "0.7"
pbr = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"


[[bin]]
name = "mandalas"
test = false
doc = false
